objects/CO1__c.object
<CustomObject>
    <fields>
        <fullName>CO2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CO2</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CO3</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CO4__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CO4</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <label>CO1</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CO1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CO1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>